--- a/src/WristWalk/AndroidManifest.xml
+++ b/src/WristWalk/AndroidManifest.xml
@@ -4,6 +4,9 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="18"/>
+    <uses-feature android:name="android.hardware.bluetooth" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="WristWalkActivity"
                   android:label="@string/app_name">
